# env

./: .gitignore  00.setup.sh  _ssh_config
bash/LINUX_WORK/: _bashrc
bash/OSX_HOME/: _bashrc
bash/OSX_WORK/: _bashrc
docker/: install-batch.sh
docker/cmake/: install.sh
docker/env/: install.sh
docker/gcc-11/: install.sh
docker/glog/: install.sh
docker/glog/tests/: CMakeLists.txt  test-glog.cc
docker/gtest/: install.sh
docker/gtest/tests/: CMakeLists.txt
docker/host/: makefile
docker/host/base/: Dockerfile
docker/scripts/: install-use-cmake.sh
docker/systemc/: install.sh
docker/systemc/tests/: CMakeLists.txt  test-systemc.cc
docker/verilator/: install.sh
docker/verilator/tests/: counter.sv  test.sv
fish/: config.fish
scripts/: shortcut.py  wait_for_file.csh
shortcut/OSX_HOME/: add.cfg  run.cfg
shortcut/OSX_WORK/: add.cfg  go.cfg  run.cfg
tmux/: _tmux.conf
vim/: _vimrc
ws/: app-local.code-workspace  demo-large.code-workspace  demo-local.code-workspace  demo-small.code-workspace  demo0-large.code-workspace  demo0-local.code-workspace  demo1-large.code-workspace  demo1-local.code-workspace  demo2-large.code-workspace  demo2-local.code-workspace  demo3-large.code-workspace  demo4-large.code-workspace  demo4-local.code-workspace  demo5-large.code-workspace  demo6-large.code-workspace  demo7-large.code-workspace  demo8-large.code-workspace  demo9-large.code-workspace  devvm12803.prn0.code-workspace  nimble5-large.code-workspace  ws.code-workspace  ws0.code-workspace  ws1.code-workspace
zsh/: _zshrc
